cmake_minimum_required(VERSION 3.27)
project(Laborator1)

set(CMAKE_CXX_STANDARD 17)

add_executable(Laborator1
        App.cpp
        Colectie.cpp
        Colectie.h
        IteratorColectie.cpp
        IteratorColectie.h
        TestExtins.cpp
        TestExtins.h
        TestScurt.cpp
        TestScurt.h)
